crates/formatter/tests/snapshots/snapshots__coder__migrations__000177_drop_provisioner_updated_at.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table provisioner_daemons add column updated_at timestamp with time zone;
