crates/formatter/tests/snapshots/snapshots__coder__migrations__000178_provisioner_daemon_idx_owner.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists idx_provisioner_daemons_name_owner_key;

alter table only provisioner_daemons
	add constraint provisioner_daemons_name_key unique (name);
