crates/formatter/tests/snapshots/snapshots__coder__migrations__000179_provisionerdaemon_add_apiversion.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table only provisioner_daemons drop column api_version;
