crates/formatter/tests/snapshots/snapshots__coder__migrations__000185_add_user_name.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users drop column name;
