crates/formatter/tests/snapshots/snapshots__coder__migrations__000185_add_user_name.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users add column name text not null default '';

comment on column users.name is 'Name of the Coder user';
