crates/formatter/tests/snapshots/snapshots__coder__migrations__000186_user_favorite_workspaces.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table only workspaces drop column favorite;
