crates/formatter/tests/snapshots/snapshots__coder__migrations__000187_jfrog_xray.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table jfrog_xray_scans;
