crates/formatter/tests/snapshots/snapshots__coder__migrations__000189_workspace_app_order.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_apps add column display_order integer not null default 0;

comment on column workspace_apps.display_order is 'Specifies the order in which to display agent app in user interfaces.';
